[package]
name = "ptsd2"
version = "0.1.2"
edition = "2024"
description = "Crate built to bridge design systems to Prism"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/ptsd"

[lib]
name = "ptsd"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "js"] }
hex = "0.4.3"
include_dir = "0.7.4"
#prism = {package = 'prism2', version = "0.1.4"}
prism = {package = 'prism2', path = "../prism"}
chrono = "0.4.42"
quircs = "0.10.3"
qrcode = "0.14.1"
imageproc = "0.25.0"
image = "0.25.9"
nsvg = "0.5.1"
downcast-rs = "2.0.2"
